# phala-deployment-action

./: README.md  action.yml  deploy_to_phala.py  pyproject.toml
